add get-collection-images endpoint
